<resources>
    <string name="app_name">My Movie View</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="create_here">create here</string>
    <string name="no_account_yet">No Account Yet?</string>
    <string name="sign_in">Sign In</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="create_an_account">Create An Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">sign up</string>
    <string name="have_an_account">Have An Account?</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="address">Address</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="update">update</string>
    <string name="overview">Overview</string>
</resources>